# dfir-iris-cortex-stack

./: .env.example  LICENSE  README.md  buildnpush2iris.sh  docker-compose.yml
cortex/config/: application.conf  logback.xml
iris_module/: pyproject.toml  requirements.txt  setup.cfg  setup.py
iris_module/iris_cortex_module_v3/: IrisCortexModuleV3.py  __init__.py
iris_module/iris_cortex_module_v3/cortex/: handler.py
scripts/: init-extensions.sql  install_module.sh  setup.sh
