[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-cortex-module-v3"
version = "3.0.0"
description = "DFIR-IRIS module for Cortex Analyzer integration. Supports Cortex 3.x and 4.x."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ram Kumar G" }
]
requires-python = ">=3.9"
dependencies = [
    # cortex4py is NOT listed here:
    #   - cortex4py 2.x is unmaintained and not on PyPI for recent versions
    #   - this module uses native requests instead (no cortex4py dependency)
    # iris-module-interface is NOT listed here:
    #   - it is pre-installed by the IRIS Docker image and is not on PyPI
    "jinja2>=3.0",
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.entry-points."iris_module"]
# Group MUST be 'iris_module' (singular) — this is what IRIS pkg_resources scan reads.
# Format: <any_name> = "<package>.<module>:<class>"
IrisCortexModuleV3 = "iris_cortex_module_v3.IrisCortexModuleV3:IrisCortexModuleV3"

[tool.setuptools.packages.find]
where = ["."]
include = ["iris_cortex_module_v3*"]
