[metadata]
name = iris-cortex-module-v3
version = 3.0.0
description = DFIR-IRIS module for Cortex Analyzer integration. Supports Cortex 3.x and 4.x.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ramkumar2545/dfir-iris-cortex-stack
author = Ram Kumar G
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    # cortex4py is NOT listed:
    #   unmaintained, not on PyPI, replaced by native requests in this module
    # iris-module-interface is NOT listed:
    #   pre-installed by IRIS Docker image, not on PyPI
    # setuptools is NOT listed:
    #   build tool, not a runtime dependency
    jinja2>=3.0
    requests>=2.28
    urllib3>=1.26
python_requires = >=3.9

[options.entry_points]
# Group MUST be 'iris_module' (singular) — IRIS reads this group via pkg_resources.
iris_module =
    IrisCortexModuleV3 = iris_cortex_module_v3.IrisCortexModuleV3:IrisCortexModuleV3
